k8s/01-service-update.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-backend
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
  namespace: todo-backend
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
