k8s/06-neg-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-backend
  annotations:
    cloud.google.com/backend-config: '{"default":"todo-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
