k8s/frontend-deployment-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo-backend
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: us-central1-docker.pkg.dev/dev-ops-475910/todo-app-repo-yanushka/todo-frontend:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
  namespace: todo-backend
  labels:
    app: todo-frontend
spec:
  type: LoadBalancer
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
