k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-backend
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: todoapp-managed-cert
spec:
  rules:
    - host: todoappilicationvm.danushka.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 5050
